test/scc/pp/errors/058.a
058.t:1:10: error: extra tokens at end of #undef directive